[gd_scene load_steps=4 format=3 uid="uid://cgthdxkyi04n4"]

[ext_resource type="Script" uid="uid://jcft5j38l0k3" path="res://ui/player.gd" id="1_dumdc"]
[ext_resource type="PackedScene" uid="uid://bwru0xvge4oj5" path="res://ui/player_bar.tscn" id="2_7kf7m"]

[sub_resource type="LabelSettings" id="LabelSettings_na4cs"]
font_size = 48
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="Player" type="VBoxContainer"]
offset_right = 264.0
offset_bottom = 65.0
theme_override_constants/separation = 0
script = ExtResource("1_dumdc")

[node name="PlayerNameBar" type="PanelContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PlayerNameBar"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 0

[node name="PlayerName" type="Label" parent="PlayerNameBar/MarginContainer"]
layout_mode = 2
text = "PlayerNameGoesHere"
label_settings = SubResource("LabelSettings_na4cs")
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="ScoreBar" parent="." instance=ExtResource("2_7kf7m")]
layout_mode = 2
metadata/font_size = 36
metadata/label_pre = "Score:"

[node name="EnergyBar" parent="." instance=ExtResource("2_7kf7m")]
layout_mode = 2
metadata/font_size = 22
metadata/label_pre = "Energy:"
